# better_embeds

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: anti_crawler.py  db.py  main.py  objects.py  utils.py
src/blueprints/: instagram.py
src/middlewares/: _middleware.py
src/middlewares/instagram/: embed.py  grid.py  image.py  oembed.py  video.py
src/views/: embed.py  oembed.py
